--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
+<!-- Task-1 -->
+<h1>Привет, мир!</h1>
+
+<!-- Task-2 -->
+<p>— Дай-ка, Гриша, карандаш.</p>
+<p>— Ты обратно не отдашь.</p>
+
+<!-- Task-3 -->
+<h2>С. Я. Маршак</h2>
+<p>Не страшен этот белый кот</p>
+<p>Ни крысам, ни мышам,</p>
+<p>Частенько с ними он ведёт</p>
+<p>Беседу по душам.</p>
+
+<!-- Task-4 -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Встреча</title>
+ </head>
+ <body>
+  <h2>С. Я. Маршак</h2>
+ </body>
+</html>
+
+<!-- Task-5 -->
+<section>
+  <h1>Август</h1>
+</section>
+
+<!-- Task-6 -->
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Встреча</title>
+ </head>
+ <body>
+  <h2>Встреча</h2>
+ </body>
+</html>
+
+<!-- Task-7 -->
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Встреча</title>
+ </head>
+ 
+ <body>
+  <h2>Встреча</h2>
+ </body>
 </html>
