--- a/index.html
+++ b/index.html
@@ -1,55 +1,84 @@
 <!-- Task-1 -->
-<h1>Привет, мир!</h1>
+<ol>
+  <li>Half-Life 2: Episode Two</li>
+  <li>Half-Life 2: Episode Three</li>
+  <li>Half-Life 2: Episode One</li>
+</ol>
+
+<h3>Работы Микеланджело</h3>
+<ul>
+  <li>Бахус</li>
+  <li>Давид</li>
+  <li>Пьета</li>
+</ul>
+
+<ol start="11">
+  <li>Николай I</li>
+  <li>Александр II</li>
+  <li>Александр III</li>
+  <li>Николай II</li>
+</ol>
+
+<ul>
+  <li>
+    Российские императоры
+    <ul>
+      <li>Пётр I Великий</li>
+      <li>Екатерина I</li>
+      <li>Пётр II</li>
+    </ul>
+  </li>
+</ul>
+
+<!-- css -->
+
+<!-- ul {
+  list-style-type: square;
+} 
+
+
+
+li {
+  list-style-type: none; 
+}
+li::before {
+  content: '►';
+}
+
+
+ul {
+  list-style-image: url(/example/image/book.png);
+}
+
+li {
+  display: inline-block;
+  padding: 10px
+}
+-->
 
 <!-- Task-2 -->
-<p>— Дай-ка, Гриша, карандаш.</p>
-<p>— Ты обратно не отдашь.</p>
+table {
+  border-spacing: 4px; 
+  
+}
+td {
+  padding: 15px;
+  color: #4c715b;
+}
 
-<!-- Task-3 -->
-<h2>С. Я. Маршак</h2>
-<p>Не страшен этот белый кот</p>
-<p>Ни крысам, ни мышам,</p>
-<p>Частенько с ними он ведёт</p>
-<p>Беседу по душам.</p>
 
-<!-- Task-4 -->
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>Встреча</title>
- </head>
- <body>
-  <h2>С. Я. Маршак</h2>
- </body>
-</html>
+td {
+  padding: 0.5rem;
+  background: #ececec;
+}
 
-<!-- Task-5 -->
-<section>
-  <h1>Август</h1>
-</section>
 
-<!-- Task-6 -->
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>Встреча</title>
- </head>
- <body>
-  <h2>Встреча</h2>
- </body>
-</html>
+<table>
+ <tr><th colspan="2">Черепашки-ниндзя</th></tr>
+ <tr><td>Имя</td><td>Оружие</td></tr>
+ <tr><td>Леонардо</td><td>Катаны</td></tr>
+ <tr><td>Рафаэль</td><td>Кинжалы-сай</td></tr>
+ <tr><td>Донателло</td><td>Шест-бо</td></tr>
+ <tr><td>Микеланджело</td><td>Нунчаки</td></tr>
+</table>
 
-<!-- Task-7 -->
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>Встреча</title>
- </head>
- 
- <body>
-  <h2>Встреча</h2>
- </body>
-</html>
